WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
151185
Fix build failure due to missing forward declaration of FontVariantSettings after
r191968
https://bugs.webkit.org/show_bug.cgi?id=151185
Summary
Fix build failure due to missing forward declaration of FontVariantSettings a...
Csaba Osztrogonác
Reported
2015-11-12 03:35:48 PST
http://trac.webkit.org/changeset/191968
broke the --minimal build.
http://trac.webkit.org/changeset/191968/trunk/Source/WebCore/css/CSSFontFaceSource.h
started using FontVariantSettings type without forward declaration. The full build works fine, because one of included header declares it (or includes its header), but CSSFontFaceSource.h shouldn't contain this transitive dependency. build log: ----------- In file included from ../../Source/WebCore/css/CSSFontFaceSource.cpp:27:0: ../../Source/WebCore/css/CSSFontFaceSource.h:64:141: error: 'FontVariantSettings' does not name a type ../../Source/WebCore/css/CSSFontFaceSource.cpp:104:14: error: prototype for 'WTF::RefPtr<WebCore::Font> WebCore::CSSFontFaceSource::font(const WebCore::FontDescription&, bool, bool, WebCore::CSSFontSelector*, const WebCore::FontFeatureSettings&, const WebCore::FontVariantSettings&)' does not match any in class 'WebCore::CSSFontFaceSource' In file included from ../../Source/WebCore/css/CSSFontFaceSource.cpp:27:0: ../../Source/WebCore/css/CSSFontFaceSource.h:64:18: error: candidate is: WTF::RefPtr<WebCore::Font> WebCore::CSSFontFaceSource::font(const WebCore::FontDescription&, bool, bool, WebCore::CSSFontSelector*, const WebCore::FontFeatureSettings&, const int&)
Attachments
Patch
(1.18 KB, patch)
2015-11-12 03:37 PST
,
Csaba Osztrogonác
no flags
Details
Formatted Diff
Diff
Patch
(1.18 KB, patch)
2015-11-12 03:42 PST
,
Csaba Osztrogonác
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Csaba Osztrogonác
Comment 1
2015-11-12 03:37:28 PST
Created
attachment 265379
[details]
Patch
Csaba Osztrogonác
Comment 2
2015-11-12 03:42:07 PST
Created
attachment 265380
[details]
Patch
WebKit Commit Bot
Comment 3
2015-11-12 10:17:17 PST
Comment on
attachment 265380
[details]
Patch Clearing flags on attachment: 265380 Committed
r192367
: <
http://trac.webkit.org/changeset/192367
>
WebKit Commit Bot
Comment 4
2015-11-12 10:17:22 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug