Fix build failure due to missing forward declaration of FontVariantSettings after r191968 https://bugs.webkit.org/show_bug.cgi?id=151185

Reviewed by Myles C. Maxfield.

* css/CSSFontFaceSource.h:


Canonical link: https://commits.webkit.org/169385@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@192367 268f45cc-cd09-0410-ab3c-d52691b4dbfc